[package]
name = "mithril"
version = "0.20.0"
authors = ["Michael Bohn <spaceodyssey@gmx.de>"]

[lib]
name = "mithril"

[dependencies]
blake2b_simd = "0.5.11"
serde = "1.0.126"
serde_json = "1.0.64"
serde_derive = "1.0.126"
strum = { version = "0.21.0", features = ["derive"] }
config = "0.11.0"
log = "0.4.14"
env_logger = "0.9.0"
num_cpus = "1.13.0"
bandit = "0.12.3"
dirs = "3.0.2"
crossbeam-channel = "0.5.1"
rust-argon2 = { git = "https://github.com/Ragnaroek/rust-argon2" }

[dev-dependencies]
difference = "2.0.0"
lazy_static = "1.4.0"