[package]
name = "mithril"
version = "0.20.0"
authors = ["Michael Bohn <spaceodyssey@gmx.de>"]

[lib]
name = "mithril"

[dependencies]
blake2b_simd = "1.0.0"
serde = "1.0.137"
serde_json = "1.0.81"
serde_derive = "1.0.137"
strum = { version = "0.24.0", features = ["derive"] }
config = "0.13.1"
log = "0.4.17"
env_logger = "0.9.0"
num_cpus = "1.13.1"
bandit = "0.12.3"
dirs = "4.0.0"
crossbeam-channel = "0.5.4"
rust-argon2 = { git = "https://github.com/Ragnaroek/rust-argon2" }

[dev-dependencies]
difference = "2.0.0"
lazy_static = "1.4.0"